syntax = "proto3";

package vcode.server;

option java_package = "org.sduwh.vcode.server.proto";
option java_outer_classname = "UserProto";
option java_multiple_files = true;

service UserService {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Register (RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string message = 1;
}

message RegisterRequest {
    string message = 1;
}

message RegisterResponse {
    string message = 1;
}
